--- a/Laboratory Files/6fcd128be248474883ec028830ecf54a.md
+++ b/Laboratory Files/6fcd128be248474883ec028830ecf54a.md
@@ -1,18 +1,5 @@
-+----------------------------------+------------------------+----------+
-| ![](vertopal_                    |                        |          |
-| 6fcd128be248474883ec028830ecf54a |                        |          |
-| /media/image1.png){width="2.4in" |                        |          |
-| height="0.5881944444444445in"}   |                        |          |
-|                                  |                        |          |
-| SCHOOL OF INFORMATION AND        |                        |          |
-| TECHNOLOGY                       |                        |          |
-+----------------------------------+------------------------+----------+
-| NAME: Aaron Joshua G. Sese       | DATE PERFORMED:        |          |
-|                                  | 11/21/2024             |          |
-+----------------------------------+------------------------+----------+
-| Section: IDC2                    | DATE SUBMITTED:        |          |
-|                                  | 11/21/2024             |          |
-+----------------------------------+------------------------+----------+
+![image](https://github.com/user-attachments/assets/962aa49b-03c1-4454-a049-bfa1a2ad4801)
+
 
 # SYSADM1 -- Git Basics
 
